nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        version: "1.0"
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index
          mountPath: /usr/share/nginx/html
      volumes:
        - name: index
          hostPath:
            path: /home/docker
