nginx-service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-canary
  labels:
    name: nginx-service-canary
spec:
  selector:
    app: nginx-c
    version: "1.1"
  ports:
    - port: 8080
      targetPort: 80
