nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    name: nginx-service
spec:
  selector:
    app: nginx
    version: "1.0"
  ports:
    - port: 8080
      targetPort: 80
